# ebookreader

./: CMakeLists.txt  Copyright.txt  README  astylerc  atReader.desktop  atReader.spec  old_okular.patch  tabletReader.desktop  tabletReader.pro  tabletReader.sln  tabletReader.spec  tabletReader.vcxproj
3rdparty_linux/libchmfile/: CMakeLists.txt  libchmfile.pro
TestEBooks/: BogdanCristea.eps  CV-en-simple.dvi  CV-en-simple.ps  Jules Verne - Cinq semaines en ballon.epub  K.Najim, E.Ikonen, A.-K.Daoud - Stochastic processes. Estim.djvu  PSD_Resource_Pack_One_by_Deluxive.psd  declration.odt  gpc.dvi.bz2  nonsegback.eps.bz2  review.okular
cmake/Modules/: FindChm.cmake  FindLibChm.cmake  FindLibDjvu.cmake  FindLibOkularCore.cmake  FindLibPoppler.cmake  FindLibPopplerQt4.cmake  FindQtMobility.cmake  mobilityconfig.prf
diagrams/: class_diagrams.xmi
help/: CMakeLists.txt  tabletReaderHelp.tex
src/: CMakeLists.txt  SingleApp.h  SlidingStackedWidget.cpp  SlidingStackedWidget.h  atReader_fr.ts  atReader_ro.qm  atReader_ro.ts  chmdocument.cpp  chmdocument.h  chmreply.cpp  chmreply.h  config.h.in  djvudocument.cpp  djvudocument.h  document.h  documentwidget.cpp  documentwidget.h  filebrowsermodel.cpp  filebrowsermodel.h  flickable.cpp  flickable.h  images.qrc  kdjvu.cpp  kdjvu.h  loadpages.cpp  loadpages.h  logger.cpp  logger.h  main.cpp  okulardocument.cpp  okulardocument.h  pageprovider.cpp  pageprovider.h  pdfdocument.cpp  pdfdocument.h  qmlcppmediator.h  screen_size.h  settings_keys.h  src.pro  tabletReader_fr.qm  (+7 more)
src/help/: CMakeLists.txt  atReaderHelp.tex  tabletReader.tex
src/icons/: .directory
src/qml/: aboutdialog.qml  filebrowser.qml  gotopage.qml  main.qml  maintoolbar.qml  popupmenu.qml  waitdialog.qml  waitpage.qml  window.qml  zoompage.qml
src/qml/Core/: Button.qml  Display.qml  calculator.js
src/qml/ModalDialog/: Button.qml  Fader.qml  ModalDialog.qml  Visual.qml
src/qml/PopupMenu/: PopupList.qml  PopupListModel.qml
src/qml/Toolbar/: Toolbar.qml  ToolbarItem.qml  ToolbarView.qml  toolbar.js
src/qml/WaitDialog/: WaitIndicator.qml
src/qml/content/: Spinner.qml
src/qml/flickbook/: FlickBook.qml
src/qml/zoompage/: Button.qml  Reel.qml  ZoomReel.qml
test/: CMakeLists.txt  main.cpp  main.h
win/: .directory  deps_tr.txt  file_loc.txt  fs_file_location.py  generate_fs.py  tabletReader.sln
win/TRInstaller/TRInstaller/: TRInstaller.vdproj
